etc/openshift/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic
spec:
  selector:
    matchLabels:
      app: spring-petclinic
  template:
    metadata:
      labels:
        app: spring-petclinic
    spec:
      containers:
        - 
          image: openshiftacademiaonline/spring-petclinic-dev:2.2
          name: java
