etc/openshift/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: spring-petclinic
spec:
  port:
    targetPort: 8080
  tls:
    #termination: edge 
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: spring-petclinic
